# Graphalyze

./: CMakeLists.txt  file-manager.cpp  interface.h  main.cpp  server.h  test.txt
include/: file-manager.h  interface.h
src/: interface.cpp  server.cpp
